--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <span>Register</span>
                         <img src="./assets/next.svg" />
                     </button>
-                    <div class="row prof-inf">
+                    <div class="row container prof-inf">
                         <div class="prof-img">
                             <img src="./assets/rectangle59.png" width="120" height="133">
                         </div>
