--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <title>Vidizayn - Home</title>
+    <title>b-fleur</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- Header -->
-    <header>
+    <header >
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <a class="navbar-brand m-auto" href="index.html">
-                    <img src="./assets/logo.svg" width="159" height="51" alt="logo">
+                    <img src="./assets/lavender.png" height="60" alt="logo">
+                    b-fleur
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,31 +29,15 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#home-banner">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#home-banner">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#upcoming">Upcoming Webinars</a>
+                            <a class="nav-link" href="#f-types">Flower Types</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#previous">Previous Webinars</a>
+                            <a class="nav-link" href="#f-care">Flower Care</a>
                         </li>
                     </ul>
-                    <div class="navbar-nav my-2 my-lg-0 share-wrapper">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Share</a>
-                        </li>
-                        <li class="nav-item m-auto">
-                            <a class="navbar-share" href="#">
-                                <img src="./assets/linkedin.svg" width="30" height="30" alt="linkedin">
-                            </a>
-                        </li>
-                        <li class="nav-item m-auto">
-                            <a class="navbar-share" href="#">
-                                <img src="./assets/facebook.svg" width="30" height="30" alt="facebook">
-                            </a>
-                        </li>
-
-                    </div>
                 </div>
             </div>
         </nav>
@@ -63,23 +48,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-xs-12 banner-left">
-                    <h5>Next Webinar</h5>
-                    <h3>6 May 2020 Friday</h3>
+                    <h5>Today</h5>
+                    <h3 id="date"></h3>
                     <hr />
-                    <h1>Better Health for a Better World</h1>
-                    <button type="button" onclick="location.href='register.html'" class="btn btn-light register-btn">
+                    <h1>The flower is <br>
+                        the stem’s cry of beauty<br>
+                        to the universe.</h1>
+                    <button type="button" class="btn btn-light register-btn">
                         <span>Register</span>
                         <img src="./assets/next.svg" />
                     </button>
                     <div class="row container prof-inf">
                         <div class="prof-img">
-                            <img src="./assets/rectangle59.png" width="120" height="133">
+                            <img src="./assets/bio-flowa.jpg" width="120" height="133">
                         </div>
                         <div class="prof-text">
-                            <h5 class="m-0 font-weight-bold">Proffesor John Doe</h5>
-                            <p class="m-0">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-                                eirmod tempor invidunt ut labore et dolore.</p>
-                            <button type="button" class="btn btn-outline-light bio-btn">See Bio</button>
+                            <h5 class="m-0 font-weight-bold">Rose</h5>
+                            <p class="m-0">Like the flower itself, the history of the rose is very colorful. Roses have been naturally growing for over 35 million years!</p>
+                            <button type="button" class="btn btn-outline-light bio-btn">See More</button>
                         </div>
                     </div>
                 </div>
@@ -93,7 +79,7 @@
                             <label>Event Password</label>
                             <input type="password" class="form-control">
                         </div>
-                        <button type="button" onclick="location.href='login.html'" class="btn login-btn">
+                        <button type="button" class="btn login-btn">
                             <span>Login</span>
                             <img src="./assets/next2.svg" />
                         </button>
@@ -103,43 +89,61 @@
         </div>
     </div>
     <!-- Home Banner End -->
-    <!-- Upcoming Widget -->
-    <div class="container" id="upcoming">
-        <h2>UPCOMING WEBINARS</h2>
-        <div class="upcoming-slider">
+    <!-- Flower Types Widget -->
+    <div class="container" id="f-types">
+        <h2>FLOWER TYPES</h2>
+        <div class="f-types-slider">
         </div>
     </div> 
-    <!-- Upcoming Widget end -->
-    <!-- Previous Widget -->
-     <div id="previous">
-        <h2>PREVIOUS WEBINARS</h2>
+    <!-- Flower Types Widget end -->
+    <!-- f-care Widget -->
+     <div id="f-care">
+        <h2>FLOWER CARE</h2>
         <div class="video-wrapper">
             <div class="container">
-                <div class="previous-slider">
+                <div class="f-care-slider">
                 </div>
             </div>
         </div>
     </div> 
-    <!-- Previous Widget end     -->
+    <!-- f-care Widget end -->
 
     <!-- Footer -->
     <footer class="page-footer font-small indigo">
         <div class="container">
-            <div class="row text-center d-flex justify-content-center pt-5 mb-3">
-                <div class="col-md-4 mb-3">
-                    <a class="navbar-brand m-auto" href="#">
-                        <img src="./assets/logo.svg" width="159" height="51" alt="logo">
+            <div class="row text-center d-flex justify-content-center pt-5">
+                <div class="col-md-4 mb-3 menu">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#home-banner">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#f-types">Flower Types</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#f-care">Flower Care</a>
+                    </li>
+                </div>
+                <div class="col-md-4 mb-3 copyright">
+                      <a class="nav-link">
+                        © Copyright b-fleur Limited 2020
                     </a>
                 </div>
-                <div class="col-md-4 mb-3">
-                    <a class="navbar-brand m-auto" href="#">
-                        <img src="./assets/Image 12.png" width="134" height="18" alt="logo">
-                    </a>
+                <div class="col-md-4 mb-3 share-wrapper">
+                    <div class="share-container">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Share</a>
+                    </li>
+                    <li class="nav-item m-auto">
+                        <a class="navbar-share" href="#">
+                            <img src="./assets/linkedin.svg" width="30" height="30" alt="linkedin">
+                        </a>
+                    </li>
+                    <li class="nav-item m-auto">
+                        <a class="navbar-share" href="#">
+                            <img src="./assets/facebook.svg" width="30" height="30" alt="facebook">
+                        </a>
+                    </li>
                 </div>
-                <div class="col-md-4 mb-3 mt-3">
-                    <h6 class="text-uppercase">
-                        <a href="#!" style="color: #4D6486; opacity: 0.7; font-size:15px;">Code</a>
-                    </h6>
                 </div>
             </div>
         </div>
